# firewall-parser

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yaml
examples/: complex.rules  minimal.rules  mixed.rules  sample.rules
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_tests.rs  parser_tests.rs
