[package]
name = "ufw-rule-parser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "parser for a ufw-like firewall rule, including internal/external address keywords."
readme = "README.md"
homepage = "https://github.com/ih4temyself/firewall-parser/"
repository = "https://github.com/ih4temyself/firewall-parser/"
keywords = ["firewall", "parser", "ufw", "pest", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0.100"
pest = "2.8.3"
pest_derive = "2.8.3"
clap = { version = "4.5.17", features = ["derive"] }
thiserror = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.deb]
maintainer = "ih4temyself"
copyright = "2025"
license-file = ["LICENSE", "4"]
extended-description = """
parser for UFW-like firewall rules.
Includes SBOM and cryptographic signatures for supply chain security.
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/ufw-rule-parser", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ufw-rule-parser/README", "644"],
]
